--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "npm ci && tsc -b && vite build",
+    "build:vercel": "rm -rf node_modules package-lock.json && npm install && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
